--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,17 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/dumbell_splash"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/dumbell_splash"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FitnessTrackerAndPlanner"
+        android:theme="@style/Theme.FitnessTrackerSplashScreen"
         tools:targetApi="31" >
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FitnessTrackerAndPlanner" >
+            android:theme="@style/Theme.FitnessTrackerSplashScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
