--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+API_KEY=sk-fitaikey2-o7gOPQwsTJqkSP1S5GMmT3BlbkFJvr3wGfp2J8zFlZviY0TF
